Fix list steps from jumping

--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,4 @@
 
 .material-icons.red { background: #f44336 !important; }
 .material-icons.green { background: #4caf50 !important; }
+.material-icons.grey { background: #dddddd !important; }
